@@ -100,6 +100,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #1491431: Fixed distutils.filelist.glob_to_re for edge cases.
+  Initial fix by Wayne Davison.
+
 - Issue 5471: Fix os.path.expanduser() for $HOME set to '/'.
 
 - Issue 1326077: fix the formatting of SyntaxErrors by the traceback module.
